Fixed spacing#

--- a/website-source/design-01/styles.css
+++ b/website-source/design-01/styles.css
@@ -74,7 +74,7 @@
   cursor: pointer;
   display: inline-block;
   background-color: white;
-  padding: 0.5rem var(--size-75) 0.5rem var(--size-50);
+  padding: 0.5rem var(--size-75);
   /* padding-left: 0.35rem; */
   color: var(--ians-colour-light-blue);
   border: 1px solid var(--ians-colour-light-blue);
@@ -89,6 +89,14 @@
   width: fit-content;
 }
 
+@media screen and (min-width: 700px) {
+  .lzo-panel-reminder button,
+  .lzo-bottom-container > a {
+    display: inline-block;
+    padding: 0.5rem var(--size-75);
+  }
+}
+
 .lzo-panel-reminder button > svg,
 .lzo-bottom-container > a > svg {
   vertical-align: middle !important;
@@ -99,12 +107,20 @@
 .lzo-panel-reminder button > span,
 .lzo-bottom-container > a > span {
   display: none;
+  padding-right: 0.5rem;
 }
 
 @media screen and (min-width: 700px) {
   .lzo-panel-reminder button > span,
   .lzo-bottom-container > a > span {
     display: inline-block;
+    padding-top: 0.25rem;
+    padding-left: 0.25rem;
+  }
+
+  .lzo-panel-reminder button > svg,
+  .lzo-bottom-container > a > svg {
+    margin-bottom: 0.25rem;
   }
 }
 
